--- a/src/scss/dark.scss
+++ b/src/scss/dark.scss
@@ -9,14 +9,14 @@
       background-color: $almost-black!important;
     }
     a {
-      color: $has-text-link;
+      color: $has-text-link!important;
     }
     a:hover,
     a:focus-visible {
-      color: $almost-white;
+      color: $almost-white!important;
     }
     strong {
-      color: $almost-white;
+      color: white!important;
     }
     input,
     select {
@@ -24,12 +24,13 @@
       background: transparent!important;
       color: white!important;
     }
+
     input[type="text"],
     input[type="search"],
     textarea {
       background: $darker-grey!important;
       border: none;
-      color: white;
+      color: white!important;
     }
     input:focus,
     select:focus {
@@ -44,6 +45,11 @@
       }
     }
     input::placeholder {
+      color: $almost-white!important;
+    }
+    input[type="text"]::placeholder,
+    input[type="search"]::placeholder,
+    textarea::placeholder {
       color: $dark-grey!important;
     }
     input[type="checkbox"]:focus,
@@ -58,15 +64,15 @@
       background: $almost-white!important;
     }
     button {
-        color: $almost-white!important;
-        background-color: transparent!important;
+      color: $almost-white!important;
+      background-color: transparent!important;
     }
     ::after {
-      border-color: $almost-white!important;
+      border-color: $has-text-link!important;
     }
     button:focus-visible {
-        color: $almost-white!important;
-        background: $darker-grey!important;
+      color: $almost-white!important;
+      background: $darker-grey!important;
     }
     table {
       width: 100%;
@@ -80,17 +86,7 @@
       color: white!important;
     }
     table.files {
-      tr {
-        td:last-child {
-          a,
-          a:hover {
-            color: $almost-white!important;
-          }
-          a:focus-visible {
-            color: $almost-black!important;
-          }
-        }
-      }
+
       button {
         color: $almost-white!important;
         background: $has-text-link!important;
@@ -184,6 +180,9 @@
           color: white!important;
         }
       }
+      .todoFilterHint {
+        color: $lighter-grey;
+      }
     }
     #todoTableSearchContainer {
       background-color: $almost-black;
@@ -210,15 +209,9 @@
     #resultStats {
       .tag {
         color: $lighter-grey!important;
-        strong {
-          color: white!important;
-        }
       }
     }
     #todoTable {
-      i {
-        color: $almost-white;
-      }
       i.fa-sort-down {
         color: $dark-grey!important;
       }
@@ -263,40 +256,41 @@
             color: $lighter-grey!important;
           }
         }
-        div.cell.text {
+        .cell.text {
           color: $almost-white!important;
         }
-        div.cell.text:focus-visible {
+        .cell.text:focus-visible {
           background: $darker-grey!important;
         }
-        .cell.itemDueDate {
-          color: white;
-          i {
-            color: inherit;
-          }
-        }
-        .cell.itemDueDate.today,
-        .cell.itemDueDate.past {
-          color: $has-text-danger;
+        .cell.hint.itemDueDate {
           i {
             color: inherit!important;
           }
         }
-        .cell.itemDueDate.tomorrow {
+        .cell.hint.itemDueDate.today,
+        .cell.hint.itemDueDate.past {
+          color: $has-text-danger!important;
+          i {
+            color: inherit!important;
+          }
+        }
+        .cell.hint.itemDueDate.tomorrow {
           color: $has-text-attention;
           i {
             color: inherit!important;
           }
-        }    
+        }
+        .cell.hint {
+          i:not(.fa-sort-down) {
+            color: $lighter-grey!important;
+          }
+        } 
       }
       .todo:focus {
         background: lighten($darker-grey, 5%)!important;
       }
     }
     #modalForm {
-      i {
-        color: $lighter-grey!important;
-      }
       .field {
         input,
         select {
@@ -465,9 +459,7 @@
       select {
         background: $darker-grey!important;
       }
-      .select:not(.is-multiple):not(.is-loading)::after {
-        border-color: white!important;
-      }
+      
       .delete,
       .modal-close,
       .tag.is-info {
@@ -522,9 +514,6 @@
     }
     .message.fixed {
       background: transparent!important;
-      i {
-        color: white!important;
-      }
       .message-body {
         color: $lighter-grey;
         background: $even-darker-grey!important;
